# book-store

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/controllers/: auth.rs  authors.rs  books.rs  mod.rs
src/db/: mod.rs
src/entities/: author.rs  book.rs  mod.rs  prelude.rs  user.rs
src/fairings/: auth.rs  cors.rs
src/migrator/: m20220101_000001_create_users_table.rs  m20231105_182316_create_authors_table.rs  m20231105_183108_create_books_table.rs  mod.rs
